8159666 breaks minimal VM

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b131

      With minimal VM, where JVMTI is not enabled, the following line causes ShouldNotReachHere:

      https://bugs.openjdk.java.net/browse/JDK-8159666
      http://hg.openjdk.java.net/jdk9/hs/hotspot/rev/fb3602f3d00b

      --- a/src/share/vm/oops/instanceKlass.cpp Mon Jun 20 17:38:14 2016 +0000
      +++ b/src/share/vm/oops/instanceKlass.cpp Mon Jun 20 22:02:20 2016 -0700
      @@ -1961,6 +1961,11 @@
           m->remove_unshareable_info();
         }
       
      + // cached_class_file might be pointing to a malloc'ed buffer allocated by
      + // event-based tracing code at CDS dump time. It's not usable at runtime
      + // so let's clear it.
      + set_cached_class_file(NULL);
      +
         // do array classes also.
         array_klasses_do(remove_unshareable_in_class);
       }

      src/share/vm/oops/instanceKlass.hpp:
      ...
        void set_cached_class_file(JvmtiCachedClassFileData *data) { ShouldNotReachHere(); }

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: