8161539: 8159666 breaks minimal VM

Replaces the shouldNotReachHere() with an assert

Reviewed-by: coleenp, dholmes, cjplummer, gziemski